PyMaker/datas/object2/RawHTML/i19901/Python_DOC_referPages.running-python-scriptsmodules-under-windows-xp.txt
<div class="post-text" itemprop="text">
<p>Problem is with running Python scripts(modules) under Windows XP. </p>
<p>Yesterday I installed Python 3.3.0 version for Windows. The problem <strong>is that I CAN use</strong> command line and IDLE to calculate (it works without errors in output), but if I try simple <strong><em>print "Hello."</em></strong> , output in command prompt, and in GUI IDLE shows me:</p>
<pre><code>Syntax error: invalid syntax
</code></pre>
<p>Path variable is set to default directory "C:\Python33\", and again I can use it for calculation, but running examples from online resources or that simple stuff is currently for me impossible. </p>
</div>
<div class="post-text" itemprop="text">
<p>you need to use something like <code>print("hello")</code> in python 3.x</p>
<p><code>print</code> has been converted to a function in python 3.x. </p>
<p>read this :`<a href="http://docs.python.org/3.0/whatsnew/3.0.html#print-is-a-function" rel="nofollow">Print is a function</a></p>
<pre><code>Python 3.1.2 (release31-maint, Dec  9 2011, 20:50:50) 
[GCC 4.4.5] on linux2
Type "help", "copyright", "credits" or "license" for more information.
&gt;&gt;&gt; print 3
  File "&lt;stdin&gt;", line 1
    print 3
          ^
SyntaxError: invalid syntax

&gt;&gt;&gt; print(3)                  # works fine
3
</code></pre>
</div>
<span class="comment-copy">Python 3 has many changes from Python 2. See <a href="http://docs.python.org/3/whatsnew/3.0.html" rel="nofollow noreferrer">docs.python.org/3/whatsnew/3.0.html</a> for an overview.</span>
<span class="comment-copy">So basicly most examples from 2.x version doesn't work in 3.x version.</span>
<span class="comment-copy">Many examples <i>do</i> run, most others are easily translated. But it's easier for you, as a python beginner, to stick with Python 2 if your tutorials assume Python 2.</span>
<span class="comment-copy">Ok Martijn, I wll probably do that.</span>
<span class="comment-copy">I tested it like a function, it works now.</span>
